--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 .string {
-  background-color: black; }
+  background-color: black;
+  z-index: 100;
+  height: 5px;
+  width: 1600px;
+  position: absolute;
+  top: 24px; }
 
 .fret-dot {
   line-height: 80px;
