--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,13 @@
 .string {
-    background-color: black
+    background-color: black;
+    z-index: 100;
+    height: 5px;
+
+    // width should be dynamic
+    width: 1600px;
+
+    position: absolute;
+    top: 24px;
 }
 
 .fret-dot {
