--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,12 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: #000;
-  opacity: 0.05;
   border-radius: 30px; }
+
+.fret-rel-interval {
+  top: 10px;
+  display: table;
+  margin: 13px auto; }
 
 .fret-w-0 {
   width: 10px; }
